--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </body>
   <nav>
     <ul>
-        <li><a href="./Home.html" target="iframe_a">Home</a></li>
+        <li><a href="./home.html" target="iframe_a">Home</a></li>
         <li><a href="./All_courses.html" target="iframe_a">All Courses</a></li>
         <li><a href="./Registration.html" target="iframe_a">Registration</a></li>
         <li><a href="./Photo_Gallery.html" target="iframe_a">Photo Gallery</a></li>
