--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <li><a href="./home.html" target="iframe_a">Home</a></li>
         <li><a href="./All_courses.html" target="iframe_a">All Courses</a></li>
         <li><a href="./Registration.html" target="iframe_a">Registration</a></li>
-        <li><a href="./Photo_Gallery.html" target="iframe_a">Photo Gallery</a></li>
+        <li><a href="./Photo_gallery.html" target="iframe_a">Photo Gallery</a></li>
         <li><a href="./Blog.html" target="iframe_a">Blog</a></li>
         <li><a href="./Help.html" target="iframe_a">Help</a></li>
-        <li><a href="./contact.html" target="iframe_a">Contact Us</a></li>
+        <li><a href="./Contact.html" target="iframe_a">Contact Us</a></li>
     </ul>
 </nav>
 
