--- a/Photo_gallery.html
+++ b/Photo_gallery.html
@@ -27,17 +27,17 @@ img.highly-transparent {
     <div>
         <table cellspacing="10" cellpadding="10">
             <tr>
-            <td> <img src="./images/1.jpeg" width=”300″> </td>
-            <td> <img src="./images/2.jpeg" width=”300″> </td>
-            <td> <img src="./images/3.jpeg" width=”300″> </td>
+            <td> <img src="images/1.jpeg" width=”300″> </td>
+            <td> <img src="images/2.jpeg" width=”300″> </td>
+            <td> <img src="images/3.jpeg" width=”300″> </td>
         </div>
         
         <div>
             </tr>
             <tr>
-            <td> <img src="./images/4.jpeg" width=”280″ > </td>
-            <td> <img src="./images/5.jpeg" width=”280″> </td>
-            <td> <img src="./images/6.jpeg" width=”280″> </td>
+            <td> <img src="images/4.jpeg" width=”280″ > </td>
+            <td> <img src="images/5.jpeg" width=”280″> </td>
+            <td> <img src="images/6.jpeg" width=”280″> </td>
         </div>
             </tr>
             </table>
