--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Live Virtual Class</title>
   </head>
   
-  <body>
+  <body style="background-color: beige;">
 
     <!-- Banner Section -->
     <section id="hero" class="d-flex align-items-center">
