--- a/All_courses.html
+++ b/All_courses.html
@@ -18,7 +18,8 @@
         tempore cumque quibusdam, id quos temporibus, ex eos velit sunt quasi architecto cum, a accusantium!
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ipsa itaque magni nulla placeat! Impedit
         tempore cumque quibusdam, id quos temporibus, ex eos velit sunt quasi architecto cum, a accusantium!
+        <br>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/eMIxuk0nOkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br><iframe width="560" height="315" src="https://www.youtube.com/embed/eMIxuk0nOkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
